Added configuration for default page items limit and created configuration model for custom configurations.

--- a/promo-codes-react-spa/.env
+++ b/promo-codes-react-spa/.env
@@ -1,2 +1,3 @@
 REACT_APP_PROMO_CODES_WEB_API_DEFAULT_VERSION=1.0
 REACT_APP_PROMO_CODES_WEB_API_BASE_URL=https://localhost:44358
+REACT_APP_DEFAULT_PAGE_ITEMS_LIMIT=5
