--- a/promo-codes-react-spa/.env
+++ b/promo-codes-react-spa/.env
@@ -1,3 +1,4 @@
 REACT_APP_PROMO_CODES_WEB_API_DEFAULT_VERSION=1.0
 REACT_APP_PROMO_CODES_WEB_API_BASE_URL=https://localhost:44358
 REACT_APP_DEFAULT_PAGE_ITEMS_LIMIT=5
+REACT_APP_SHOULD_MOCK_PROMO_CODES_INFRASTRUCTURE=false
